<resources>
    <string name="app_name">Auditor</string>
    <string name="introduction">Two devices with Android 10 or higher are needed to perform verification:\n\n- The device to be verified (Auditee), which needs to be one of the supported devices.\n\n- An Android device to perform the verification (Auditor).\n\nThe verification process requires sending data between the devices by scanning QR codes.</string>
    <string name="unsupported_auditee">Device is not one of the supported models.</string>
    <string name="camera_permission_denied">Camera permission is required to scan QR codes.</string>
    <string name="auditee_button">Auditee (device being verified)</string>
    <string name="auditor_button">Auditor (device performing verification)</string>
    <string name="qrcode_content_description">QR code</string>
    <string name="generate_error"><b>Error encountered generating attestation:\n\n</b></string>
    <string name="verify_error"><b>Error encountered verifying attestation:\n\n</b></string>
    <string name="qr_code_scan_hint_auditee">Now scan this QR Code from the other device.</string>
    <string name="qr_code_scan_hint_auditee_pairing">Now scan this QR Code from the other device.\n\nThis is the initial pairing and needs to be completed or pairings will need to be cleared on either side to try again.</string>
    <string name="qr_code_scan_hint_auditor">Now scan this QR Code from the other device.\n\nTap this QR code after scanning to proceed.</string>
    <string name="scanned_invalid_account_qr_code">Scanned invalid account QR code</string>
    <string name="bind_failure">Failed to open camera due to an OS or hardware issue. Try rebooting.</string>
    <string name="camera_provider_init_failure">Failed to load camera provider due to OS or hardware issue. Try rebooting.</string>
    <string name="action_clear_auditee">Clear Auditee pairings</string>
    <string name="action_clear_auditor">Clear Auditor pairings</string>
    <string name="action_enable_remote_verify">Enable remote verification</string>
    <string name="action_disable_remote_verify">Disable remote verification</string>
    <string name="action_submit_sample">Submit sample data</string>
    <string name="action_help">Help</string>
    <string name="enable_remote_verify_success">Scheduled regular remote verification</string>
    <string name="disable_remote_verify_success">Disabled remote verification</string>
    <string name="schedule_submit_sample_success">Scheduled submitting sample data</string>
    <string name="clear_auditee_pairings_success">Cleared Auditee pairings</string>
    <string name="clear_auditee_pairings_failure">Failed to fully clear Auditee pairings</string>
    <string name="clear_auditor_pairings_success">Cleared Auditor pairings</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="disable">Disable</string>
    <string name="remote_verification_notification_success_channel">Remote verification success</string>
    <string name="remote_verification_notification_success_title">Remote verification success</string>
    <string name="remote_verification_notification_success_content">Successfully submitted remote attestation.</string>
    <string name="remote_verification_notification_failure_channel">Remote verification failure</string>
    <string name="remote_verification_notification_failure_title">Remote verification failure</string>
    <string name="remote_verification_notification_failure_content">Failed to submit remote attestation.</string>
    <string name="sample_submission_notification_channel">Sample submission</string>
    <string name="sample_submission_notification_title">Submitted sample data</string>
    <string name="sample_submission_notification_content">Successfully submitted sample data.</string>
    <string name="sample_submission_notification_title_failure">Failed submitting sample data</string>
    <string name="sample_submission_notification_content_failure">Failed to submit sample data.</string>
    <string name="scanner_label">Scan QR code shown on the other device.</string>
    <string name="verifying_attestation">Verifying attestation…</string>
    <string name="generating_attestation">Generating attestation…</string>
    <string name="verify_strong"><b>Successfully performed strong paired verification and identity confirmation.</b>\n\n</string>
    <string name="verify_basic"><b>Successfully performed basic initial verification and pairing.</b>\n\n</string>
    <string name="hardware_enforced"><b>Hardware verified information:</b>\n\n</string>
    <string name="identity">Pairing identity (hash of pinned hardware-backed key): %s\n</string>
    <string name="security_level">Pinned security level: %s\n</string>
    <string name="security_level_tee">Standard — Trusted Execution Environment (TEE)</string>
    <string name="security_level_tee_attest_key">Standard — Trusted Execution Environment (TEE) with pairing specific attest key</string>
    <string name="security_level_strongbox">High — StrongBox Hardware Security Module (HSM)</string>
    <string name="security_level_strongbox_attest_key">Very High — StrongBox Hardware Security Module (HSM) with pairing specific attest key</string>
    <string name="device">Pinned device: %s\n</string>
    <string name="os">Pinned OS: %s (unmodified official release)\n</string>
    <string name="os_version">Pinned OS version: %s\n</string>
    <string name="os_patch_level">Pinned OS patch level: %s\n</string>
    <string name="vendor_patch_level">Pinned vendor patch level: %s\n</string>
    <string name="boot_patch_level">Pinned boot patch level: %s\n</string>
    <string name="verified_boot_key_hash">Pinned verified boot key hash: %s\n</string>
    <string name="verified_boot_hash">Verified boot hash: %s\n</string>
    <string name="os_enforced">\n<b>Information provided by the verified OS:</b>\n\n</string>
    <string name="auditor_app_version">Pinned Auditor app version: %d\n</string>
    <string name="auditor_app_variant">Pinned Auditor app variant: %s\n</string>
    <string name="auditor_app_variant_release">Release build signed by GrapheneOS</string>
    <string name="auditor_app_variant_play">Release build signed by Play Store</string>
    <string name="auditor_app_variant_debug">Debug build signed by GrapheneOS</string>
    <string name="user_profile_secure">User profile secure: %s\n</string>
    <string name="enrolled_biometrics">Enrolled biometrics: %s\n</string>
    <string name="accessibility">Accessibility service(s) enabled: %s\n</string>
    <string name="device_admin">Device administrator(s) enabled: %s\n</string>
    <string name="device_admin_system">yes, but only system apps</string>
    <string name="device_admin_non_system">yes, with non-system apps</string>
    <string name="adb_enabled">Android Debug Bridge enabled: %s\n</string>
    <string name="add_users_when_locked">Add users from lock screen: %s\n</string>
    <string name="deny_new_usb">Deny new USB peripherals when locked: %s\n</string>
    <string name="oem_unlock_allowed">OEM unlocking allowed: %s\n</string>
    <string name="system_user">Main user account: %s\n</string>
    <string name="history">\n<b>Attestation history:</b>\n\n</string>
    <string name="first_verified">First verified: %s\n</string>
    <string name="last_verified">Last verified: %s\n</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="device_huawei">Huawei Honor 9 lite / Honor 10 / View 10 / Mate 10 / Mate 20 / Mate 20 lite / P smart 2019 / Pro / P20 / P20 Pro / Y9 2019</string>
    <string name="device_huawei_honor_7a_pro">Huawei Honor 7A Pro / Y7 2019</string>
    <string name="device_nokia">Nokia (6.1, 6.1 Plus, 7 Plus)</string>
    <string name="device_nokia_3_1">Nokia 3.1</string>
    <string name="device_nokia_7_1">Nokia 7.1</string>
    <string name="device_pixel_2">Google Pixel 2</string>
    <string name="device_pixel_2_xl">Google Pixel 2 XL</string>
    <string name="device_pixel_3_generic">Google Pixel 3 / Pixel 3 XL</string>
    <string name="device_pixel_3">Google Pixel 3</string>
    <string name="device_pixel_3_xl">Google Pixel 3 XL</string>
    <string name="device_pixel_3a_generic">Google Pixel 3a / Pixel 3a XL</string>
    <string name="device_pixel_3a">Google Pixel 3a</string>
    <string name="device_pixel_3a_xl">Google Pixel 3a XL</string>
    <string name="device_pixel_4_generic">Google Pixel 4 / Pixel 4 XL</string>
    <string name="device_pixel_4">Google Pixel 4</string>
    <string name="device_pixel_4_xl">Google Pixel 4 XL</string>
    <string name="device_pixel_4a">Google Pixel 4a</string>
    <string name="device_pixel_4a_5g">Google Pixel 4a (5G)</string>
    <string name="device_pixel_5">Google Pixel 5</string>
    <string name="device_pixel_5_generic">Google Pixel 4a (5G) / Pixel 5</string>
    <string name="device_pixel_5a">Google Pixel 5a</string>
    <string name="device_pixel_6">Google Pixel 6</string>
    <string name="device_pixel_6_pro">Google Pixel 6 Pro</string>
    <string name="device_pixel_6a">Google Pixel 6a</string>
    <string name="device_pixel_7">Google Pixel 7</string>
    <string name="device_pixel_7_pro">Google Pixel 7 Pro</string>
    <string name="device_pixel_7a">Google Pixel 7a</string>
    <string name="device_pixel_tablet">Google Pixel Tablet</string>
    <string name="device_pixel_fold">Google Pixel Fold</string>
    <string name="device_pixel_8">Google Pixel 8</string>
    <string name="device_pixel_8_pro">Google Pixel 8 Pro</string>
    <string name="device_sm_a705fn">Samsung Galaxy A70 (SM-A705FN)</string>
    <string name="device_sm_g960f">Samsung Galaxy S9 (SM-G960F)</string>
    <string name="device_sm_g960_na">Samsung Galaxy S9 USA/Canada (SM-G960U/SM-G960U1/SM-G960W)</string>
    <string name="device_sm_g9600">Samsung Galaxy S9 China (G9600)</string>
    <string name="device_sm_g965f">Samsung Galaxy S9+ (SM-G965F)</string>
    <string name="device_sm_g965_msm">Samsung Galaxy S9+ (Snapdragon)</string>
    <string name="device_sm_g970f">Samsung Galaxy S10e (SM-G970F)</string>
    <string name="device_sm_g975f">Samsung Galaxy S10+ (SM-G975F)</string>
    <string name="device_sm_j260a">Samsung Galaxy J2 Core (SM-J260A)</string>
    <string name="device_sm_j260t1">Samsung Galaxy J2 Core (SM-J260T1)</string>
    <string name="device_sm_j260f">Samsung Galaxy J2 Core (SM-J260F)</string>
    <string name="device_sm_j337a">Samsung Galaxy J3 2018 (SM-J337A) / Galaxy Amp Prime 3 (SM-J337AZ)</string>
    <string name="device_sm_j337t">Samsung Galaxy J3 (SM-J337T)</string>
    <string name="device_sm_j720f">Samsung Galaxy J7 Duo (SM-J720F)</string>
    <string name="device_sm_m205f">Samsung Galaxy M20 (SM-M205F)</string>
    <string name="device_sm_n960f">Samsung Galaxy Note 9 (SM-N960F)</string>
    <string name="device_sm_n960u">Samsung Galaxy Note 9 (SM-N960U)</string>
    <string name="device_sm_n970f">Samsung Galaxy Note 10 (SM-N970F)</string>
    <string name="device_sm_n970u">Samsung Galaxy Note 10 (SM-N970U)</string>
    <string name="device_sm_n975u">Samsung Galaxy Note 10+ (SM-N975U)</string>
    <string name="device_sm_t510">Samsung Galaxy Tab A 10.1 (2019)</string>
    <string name="device_sm_t835">Samsung Galaxy Tab S4</string>
    <string name="device_sm_j737t1">Samsung Galaxy J7 (SM-J737T1)</string>
    <string name="device_sm_s367vl">Samsung Galaxy J3 (SM-S367VL)</string>
    <string name="device_sony_xperia_xa2">Sony Xperia XA2</string>
    <string name="device_sony_xperia_xz1">Sony Xperia XZ1 / Xperia XZ1 Compact</string>
    <string name="device_sony_xperia_xz2">Sony Xperia XZ2 (H8216)</string>
    <string name="device_sony_xperia_xz2_compact">Sony Xperia XZ2 Compact</string>
    <string name="device_oneplus_6_a6003">OnePlus 6 A6003</string>
    <string name="device_oneplus_6t_a6013">OnePlus 6T A6013</string>
</resources>