<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.attestation.auditor.AttestationActivity"
    tools:showIn="@layout/activity_attestation">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false">

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_normal_margin"
                android:maxLines="100"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:text="@string/introduction" />

            <Button
                android:id="@+id/auditee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_normal_margin"
                android:text="@string/auditee_button"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/auditor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_normal_margin"
                android:text="@string/auditor_button"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/remote_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_normal_margin"
                android:text="@string/action_enable_remote_verify" />

            <LinearLayout
                android:id="@+id/auditees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/content_normal_margin">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:id="@+id/auditee_list_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/content_normal_margin"
                    android:maxLines="100"
                    android:scrollbarAlwaysDrawHorizontalTrack="false"
                    android:scrollbarAlwaysDrawVerticalTrack="false"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"
                    android:text="@string/paired_auditees_list_loading" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/auditee_list_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:clipToPadding="false"
                    android:scrollbars="vertical"
                    android:nestedScrollingEnabled="true"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_normal_margin"
            android:maxLines="10000"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:text=""
            android:textIsSelectable="true" />

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/qrcode_content_description" />

    </LinearLayout>
</RelativeLayout>
